[gd_scene load_steps=7 format=3 uid="uid://608hnjhhx8hy"]

[ext_resource type="Script" path="res://Main.gd" id="1_xrmba"]
[ext_resource type="PackedScene" uid="uid://b85wnuvbxbeso" path="res://HiddenTown.tscn" id="2_pkbhg"]
[ext_resource type="Script" path="res://SpellManager.gd" id="3_lntko"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ivr0l"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_wafh8"]
sky_material = SubResource("ProceduralSkyMaterial_ivr0l")

[sub_resource type="Environment" id="Environment_i4wu3"]
background_mode = 2
sky = SubResource("Sky_wafh8")
tonemap_mode = 2
glow_enabled = true

[node name="World" type="Node"]
script = ExtResource("1_xrmba")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i4wu3")

[node name="hidden_town" parent="." instance=ExtResource("2_pkbhg")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 386.0
offset_top = 214.0
offset_right = -386.0
offset_bottom = -214.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player.tscn")
spawn_path = NodePath("..")

[node name="StatusLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 69.0
grow_horizontal = 2

[node name="SpellManager" type="Node" parent="."]
script = ExtResource("3_lntko")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="text_changed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/AddressEntry" to="." method="_on_address_entry_text_changed"]
